package com.example.anime.ui.utils

object TestConstants {
    const val NAVIGATE_TO_FAVORITE_BTN = "navigateToFavoriteBtn"
    const val SEARCH_TEXT_FIELD = "searchTextField"
    const val NO_RESULTS_TEXT = "noResultsText"
    const val RESULTS_LAZY_VERTICAL_GRID = "resultsVerticalGrid"
    const val ITEM_FAVORITE_BTN = "itemFavoriteBtn"
    const val BACK_BTN = "backArrowBtn"
}
