<resources>
    <string name="app_name">Anime</string>
    <string name="filters">Filters: </string>
    <string name="loading_failed">Failed to load</string>
    <string name="placeholder_result">Placeholder result text</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading</string>
    <string name="no_search_results">No Search Results…</string>
    <string name="no_favorites_saved">No Favorites Saved</string>
    <string name="publication_date">"Publication Date: %s</string>
    <string name="type">"Type: %s</string>
    <string name="section">"Section: %s</string>
    <string name="close">CLOSE</string>
    <string name="type_filters">Type Filters</string>
    <string name="section_filters">Section Filters</string>
    <string name="delete">Delete</string>
    <string name="full_name">Full Name: %s</string>
    <string name="description">Description: %s</string>
    <string name="gender">Gender: %s</string>
    <string name="date_of_birth">DateOfBirth: %s</string>
    <string name="age">Age: %s</string>
    <string name="blood_type">BloodType: %s</string>
    <string name="title">Title: %s</string>
    <string name="episodes">Episodes: %s</string>
    <string name="score">Score: %s</string>
    <string name="genres">Genres: %s</string>
    <string name="english">EnglishName: %s</string>
    <string name="japanese">JapaneseName: %s</string>
    <string name="character">Character: %s</string>
</resources>
