package com.example.anime.ui.navigation

object NavConstants {

    const val DETAIL_SCREEN_TITLE = "Detail"
    const val SEARCH_SCREEN_TITLE = "Search"
    const val SEARCH_SCREEN_ROUTE = "search"
    const val FAVORITES_SCREEN_TITLE = "Favorites"
    const val FAVORITES_SCREEN_ROUTE = "favorites"
    const val CHARACTER_SCREEN_TITLE = "Character"
    const val CHARACTER_SCREEN_ROUTE = "character"
    const val DETAIL_ARGUMENT_KEY = "id"
}
